--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seemusic/sop-element-theme",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": false,
   "description": "星球发行 SOP 自定义 ElementUI 皮肤",
   "author": "cuiguojie@kanjian.com",
@@ -9,10 +9,9 @@
     "storybook:serve": "vue-cli-service storybook:serve -p 6007 -c config/storybook"
   },
   "main": "src/index.scss",
-  "dependencies": {
-    "@storybook/vue": "^6.0.21"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@storybook/vue": "^6.0.21",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-knobs": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
