feat(select): 更新 ElSelect multiple 模式下 tag 样式

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seemusic/sop-element-theme",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": false,
   "description": "星球发行 SOP 自定义 ElementUI 皮肤",
   "author": "cuiguojie@kanjian.com",
@@ -11,22 +11,22 @@
   "main": "src/index.scss",
   "dependencies": {},
   "devDependencies": {
-    "@storybook/vue": "^6.0.21",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-knobs": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
     "@storybook/addon-notes": "^5.3.21",
-    "@vue/cli-plugin-babel": "^4.2.2",
-    "@vue/cli-plugin-eslint": "^4.2.2",
-    "@vue/cli-service": "^4.2.2",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.3",
+    "@storybook/vue": "^6.0.21",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "^4.5.12",
+    "@vue/eslint-config-airbnb": "^5.0.2",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "core-js": "^3.6.4",
-    "element-ui": "^2.13.2",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.25.0",
+    "core-js": "^3.11.0",
+    "element-ui": "^2.15.1",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.11",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-cli-plugin-element": "^1.0.1",
