--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seemusic/sop-element-theme",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": false,
   "description": "星球发行 SOP 自定义 ElementUI 皮肤",
   "author": "cuiguojie@kanjian.com",
@@ -8,25 +8,32 @@
     "storybook:build": "vue-cli-service storybook:build -c config/storybook",
     "storybook:serve": "vue-cli-service storybook:serve -p 6007 -c config/storybook"
   },
+  "gitHooks": {
+    "commit-msg": "commitlint -e $GIT_PARAMS"
+  },
   "main": "src/index.scss",
   "dependencies": {},
   "devDependencies": {
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-knobs": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-knobs": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
     "@storybook/addon-notes": "^5.3.21",
-    "@storybook/vue": "^6.0.21",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "^4.5.12",
+    "@storybook/vue": "^6.2.9",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "core-js": "^3.11.0",
+    "commitizen": "^4.2.4",
+    "core-js": "^3.12.1",
+    "cz-conventional-changelog": "^3.3.0",
     "element-ui": "^2.15.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.32.11",
+    "sass": "^1.32.12",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-cli-plugin-element": "^1.0.1",
@@ -41,5 +48,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SeeMusic/sop-element-theme.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
