--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
   "name": "@seemusic/sop-element-theme",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": false,
   "description": "星球发行 SOP 自定义 ElementUI 皮肤",
   "author": "cuiguojie@kanjian.com",
   "scripts": {
-    "storybook:build": "vue-cli-service storybook:build -c config/storybook",
-    "storybook:serve": "vue-cli-service storybook:serve -p 6007 -c config/storybook"
+    "storybook:build": "build-storybook",
+    "storybook:serve": "start-storybook -p 6006"
   },
   "gitHooks": {
     "commit-msg": "commitlint -e $GIT_PARAMS"
   },
   "main": "src/index.scss",
-  "dependencies": {},
+  "peerDependencies": {
+    "vue": "^2.6.11",
+    "element-ui": "^2.4.5"
+  },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-knobs": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/addon-notes": "^5.3.21",
-    "@storybook/vue": "^6.2.9",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/vue": "^6.4.9",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "commitizen": "^4.2.4",
-    "core-js": "^3.12.1",
+    "core-js": "^3.6.5",
     "cz-conventional-changelog": "^3.3.0",
-    "element-ui": "^2.15.1",
+    "element-ui": "^2.4.5",
     "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.32.12",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-cli-plugin-storybook": "~1.2.2",
+    "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.11"
   },
   "bugs": {
